Added main heading

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <header>
+      <h1>These are my favourite places</h1>
+    </header>
   </body>
 </html>
