--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>React App</title>
+    <title>Kasia's favourite places</title>
     <style>
       body {
         background-color: pink;
+        text-align: center;
+      }
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
       section {
         background-color: coral;
         width: 80%;
+        padding: 10px;
       }
     </style>
   </head>
   <body>
     <div id="root"></div>
-    <header>
-      <h1>These are my favourite places</h1>
-    </header>
-    <section>
-      <h2>Budapest</h2>
-      <h3>Hungary, Europe</h3>
-      <img 
-        src="https://images.unsplash.com/photo-1565426873118-a17ed65d74b9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=876&q=80"
-        alt="Parliament buidling in Budapest" />
-      <p>I love watching the bats flying over the parliament at night</p>
-    </section>
+    <main>
+      <section>
+        <h2>Budapest</h2>
+        <h3>Hungary, Europe</h3>
+        <img 
+          src="https://images.unsplash.com/photo-1565426873118-a17ed65d74b9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=876&q=80"
+          alt="Parliament buidling in Budapest" />
+        <p>I love watching the bats flying over the parliament at night</p>
+      </section>
+    </main>
   </body>
 </html>
